Background color of task and event panel changed to white