@@ -459,7 +459,7 @@ public class TaskPanel extends JPanel {
 		dlg.chkEndDate.setSelected(false);
 	else
 		dlg.chkEndDate.setSelected(true);
-		dlg.progress.setValue(new Integer(t.getProgress()));
+		dlg.progress.setValue(Integer.valueOf(t.getProgress()));
  	dlg.chkEndDate_actionPerformed(null);
         dlg.setVisible(true);
         if (dlg.CANCELLED)
@@ -701,7 +701,7 @@ public class TaskPanel extends JPanel {
 	void toggleShowActiveOnly_actionPerformed(ActionEvent e) {
 		Context.put(
 			"SHOW_ACTIVE_TASKS_ONLY",
-			new Boolean(ppShowActiveOnlyChB.isSelected()));
+			Boolean.valueOf(ppShowActiveOnlyChB.isSelected()));
 		taskTable.tableChanged();
 	}
 
